--- a/omnifood.com/sass/layout/_header.scss
+++ b/omnifood.com/sass/layout/_header.scss
@@ -11,6 +11,15 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+
+        @include respond (big-desktop) {
+            width: 100%;
+            padding: 0 2%;
+        }
+
+        @include respond (tab-port) {
+            padding: 0 4%;
+        }
     }
 
     &__logo {
@@ -28,6 +37,10 @@
         float: right;
         list-style: none;
         margin-top: 60px;
+
+        @include respond (tab-port) {
+            display: none;
+        }
     
     }
 
