--- a/omnifood.com/sass/main.scss
+++ b/omnifood.com/sass/main.scss
@@ -1,7 +1,9 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
+
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
 
 @import "base/base";
 @import "base/typography";
