testing header photo

--- a/omnifood.com/sass/layout/_header.scss
+++ b/omnifood.com/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    // background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../images/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../images/hero.JPG);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
