--- a/omnifood.com/css/style.css
+++ b/omnifood.com/css/style.css
@@ -6,6 +6,7 @@
 1800px + ------ Big desktop
 */
 .header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../images/hero.JPG);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
