--- a/omnifood.com/sass/base/_base.scss
+++ b/omnifood.com/sass/base/_base.scss
@@ -60,7 +60,7 @@ section {
         padding: 30px 0;
     }
 
-    @include respond (tab-phone) {
+    @include respond (phone) {
         padding: 20px 0;
     }
 }
