--- a/omnifood.com/sass/pages/_sections.scss
+++ b/omnifood.com/sass/pages/_sections.scss
@@ -243,7 +243,7 @@
     background-position: center;
     background-attachment: fixed;
     color: $color-white;
-    height: 90vh;
+    // height: 90vh;
 
     &--img {
         height: 45px;
