--- a/omnifood.com/sass/pages/_sections.scss
+++ b/omnifood.com/sass/pages/_sections.scss
@@ -37,6 +37,10 @@
     &--text {
         font-size: 90%;
         line-height: 145%;
+
+        @include respond (phone) {
+           font-size: 94%;
+        }
     }
 }
 
@@ -192,6 +196,10 @@
 
     @include respond (tab-land) {
        font-size: 90%;
+
+       @include respond (phone) {
+        font-size: 95%;
+     }
     }
 
     &--img {
@@ -249,6 +257,10 @@
         border-radius: 50%;
         margin-right: 10px;
         vertical-align: middle;
+
+        @include respond (phone) {
+           height: 50px;
+          }
     }
 }
 
@@ -256,6 +268,10 @@
     font-size: 90%;
     margin-top: 25px;
     display: block;
+
+    @include respond (phone) {
+        font-size: 94%;
+     }
 }
 
 .blockquote {
@@ -319,6 +335,10 @@
             font-size: 250%;
         }
 
+        @include respond (phone) {
+            font-size: 290%;
+         }
+
         & span {
             font-size: 30%;
             font-weight: 300;
@@ -328,6 +348,10 @@
 
     &-meal {
         font-size: 80%;
+        
+        @include respond (phone) {
+            font-size: 85%;
+         }
     }
 
     &-icon {
@@ -349,6 +373,12 @@
         @include respond (tab-port) {
             margin: auto;
             width: 57%;
+
+         }
+
+         @include respond (phone) {
+            margin: auto;
+            width: 65%;
 
          }
 
