--- a/omnifood.com/sass/layout/_footer.scss
+++ b/omnifood.com/sass/layout/_footer.scss
@@ -23,6 +23,9 @@
             display: inline-block;
             margin-right: 20px;
 
+            @include respond (phone) {
+                margin-right: 5px;
+              }
         }
 
 
