--- a/omnifood.com/css/style.css
+++ b/omnifood.com/css/style.css
@@ -6,7 +6,7 @@
 1800px + ------ Big desktop
 */
 .header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../images/hero.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../images/hero-min.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -571,7 +571,8 @@
     @media only screen and (max-width: 767px) {
       .main__nav-list {
         float: left;
-        margin-top: 35px;
+        margin-top: 30px;
+        margin-left: 25;
         display: none; } }
   .main__nav-link:link, .main__nav-link:visited {
     color: #fff;
@@ -952,7 +953,7 @@ input[type=submit] {
       border-bottom: none; }
 
 .section__testimonials {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../images/back-customers.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../images/back-customers-min.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
