--- a/omnifood.com/sass/layout/_navigation.scss
+++ b/omnifood.com/sass/layout/_navigation.scss
@@ -20,7 +20,8 @@
 
         @include respond (tab-port) {
             float: left;
-            margin-top: 35px;
+            margin-top: 30px;
+            margin-left: 25;
             display: none;
 
             // position: absolute;
