--- a/omnifood.com/sass/pages/_sections.scss
+++ b/omnifood.com/sass/pages/_sections.scss
@@ -31,7 +31,7 @@
             width: 100%;
             margin-left: 0;
         }
-        
+
     }
 
     &--text {
@@ -44,7 +44,7 @@
     }
 }
 
-.box{
+.box {
     padding: 1%;
 }
 
@@ -82,7 +82,7 @@
                 opacity: 1;
             }
         }
-       
+
     }
 }
 
@@ -101,7 +101,7 @@
         @include respond (tab-port) {
             width: 50%;
         }
-        
+
     }
 
     &-work--step {
@@ -143,21 +143,22 @@
         width: 55px;
 
         @include respond (tab-port) {
-           height: 40px;
-           width: 40px;
-           margin-right: 15px;
-           padding: 4px;
-           font-size: 120%;
+            height: 40px;
+            width: 40px;
+            margin-right: 15px;
+            padding: 4px;
+            font-size: 120%;
         }
 
     }
-  
+
 }
 
 .steps-box {
     @include respond (tab-land) {
         margin-top: 10px;
     }
+
     &:first-child {
         text-align: right;
         padding-right: 3%;
@@ -178,7 +179,7 @@
         }
     }
 
-    
+
 }
 
 .btn-app img {
@@ -189,7 +190,7 @@
 
     @include respond (phone) {
         height: 38px;
-      }
+    }
 
 }
 
@@ -204,11 +205,11 @@
     margin-bottom: 5px;
 
     @include respond (tab-land) {
-       font-size: 90%;
+        font-size: 90%;
 
-       @include respond (phone) {
-        font-size: 95%;
-       }
+        @include respond (phone) {
+            font-size: 95%;
+        }
     }
 
     &--img {
@@ -243,7 +244,7 @@
 
         &:link,
         :visited {
-        color: $color-primary;
+            color: $color-primary;
         }
 
         &:hover,
@@ -252,11 +253,11 @@
             border-bottom: none;
         }
     }
-    
+
 }
 
 .section__testimonials {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../images/back-customers.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../images/back-customers-min.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -269,8 +270,8 @@
         vertical-align: middle;
 
         @include respond (phone) {
-           height: 50px;
-          }
+            height: 50px;
+        }
     }
 }
 
@@ -281,7 +282,7 @@
 
     @include respond (phone) {
         font-size: 94%;
-     }
+    }
 }
 
 .blockquote {
@@ -304,7 +305,7 @@
 
 .section__plans {
     background-color: #f4f4f4;
-    
+
 }
 
 .plan__box {
@@ -319,23 +320,23 @@
     }
 
     & div {
-      padding: 15px;
-      border-bottom: 1px solid #e8e8e8;  
+        padding: 15px;
+        border-bottom: 1px solid #e8e8e8;
     }
 
     & div:first-child {
 
         @include respond (tab-port) {
             text-align: center;
-            
-         }
+
+        }
     }
 
     & div:last-child {
         text-align: center;
         border: 0;
     }
-   
+
     &-price {
         color: $color-primary;
         font-size: 300%;
@@ -348,21 +349,21 @@
 
         @include respond (phone) {
             font-size: 290%;
-         }
+        }
 
         & span {
             font-size: 30%;
             font-weight: 300;
-        }    
+        }
 
     }
 
     &-meal {
         font-size: 80%;
-        
+
         @include respond (phone) {
             font-size: 85%;
-         }
+        }
     }
 
     &-icon {
@@ -385,20 +386,20 @@
             margin: auto;
             width: 57%;
 
-         }
+        }
 
-         @include respond (phone) {
+        @include respond (phone) {
             margin: auto;
             width: 74%;
 
-         }
+        }
 
-    
+
         & li {
             padding: 5px 0;
 
         }
-    }   
+    }
 }
 
 .primium {
@@ -427,7 +428,7 @@ textarea {
     padding: 7px;
     border-radius: 3px;
     border: 1px solid #ccc;
-    font-size:medium;
+    font-size: medium;
 
     @include respond (phone) {
         margin: 10px;
@@ -445,4 +446,7 @@ input[type=checkbox] {
         margin: 12px 7px 12px 0;
     }
 }
-*:focus {outline: none;}
+
+*:focus {
+    outline: none;
+}
