--- a/omnifood.com/sass/pages/_sections.scss
+++ b/omnifood.com/sass/pages/_sections.scss
@@ -257,7 +257,7 @@
 }
 
 .section__testimonials {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../images/back-customers-min.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/back-customers-min.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
