--- a/omnifood.com/css/style.css
+++ b/omnifood.com/css/style.css
@@ -6,7 +6,7 @@
 1800px + ------ Big desktop
 */
 .header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../images/hero-min.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/hero-min.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -953,7 +953,7 @@ input[type=submit] {
       border-bottom: none; }
 
 .section__testimonials {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../../../images/back-customers-min.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/back-customers-min.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
