--- a/omnifood.com/sass/layout/_footer.scss
+++ b/omnifood.com/sass/layout/_footer.scss
@@ -74,20 +74,20 @@
 
         }
 
-        & ion-icon[name=logo-facebook]:hover {
+        & .ion-social-facebook:hover {
            color: #3b5998
 
         }
 
-        & ion-icon[name=logo-twitter]:hover {
+        & .ion-social-twitter:hover {
             color: #55acee ;
         }
 
-        & ion-icon[name=logo-google]:hover {
+        & .ion-social-googleplus:hover {
             color: #dc4e41;
         }
 
-        & ion-icon[name=logo-instagram]:hover {
+        & .ion-social-instagram:hover {
             color: #3f729b;
         }
 
